# go1_gesture_tracking

./: DEPENDENCIES.md  README.md
docs/: WEBSITE_SETUP.md  _config.yml  index.md  project.md  resources.md  roadmap.md  safety.md  setup.md
docs/_data/: nav.yml
docs/_includes/: head.html  header.html
docs/_layouts/: default.html  home.html
docs/_sass/: _header.scss  _layout.scss  _mobile-header.scss
gesture_control/: CMakeLists.txt  README.md  package.xml
gesture_control/config/: command_limits.yaml
gesture_control/include/gesture_control/: README.md
gesture_control/src/: README.md
gesture_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
gesture_recognition/config/: gestures.yaml
gesture_recognition/models/: README.md
gesture_recognition/src/gesture_recognition/: __init__.py
