<?xml version="1.0"?>
<package format="2">
  <name>gesture_control</name>
  <version>0.1.0</version>
  <description>Safety-aware gesture-to-command mapping for the Unitree Go1.</description>

  <maintainer email="uvaidya@clemson.edu">DyCo-AI Lab</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>unitree_legged_msgs</depend>

  <export/>
</package>

