<?xml version="1.0"?>
<package format="2">
  <name>gesture_recognition</name>
  <version>0.1.0</version>
  <description>Laptop-webcam hand gesture recognition for Go1 teleoperation.</description>

  <maintainer email="uvaidya@clemson.edu">DyCo-AI Lab</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>

